# backend

./: README.md
api_gateway/: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml  settings.py
api_gateway/logic/: file_logic.py  note_logic.py  user_logic.py
api_gateway/routers/: depends.py  gateway.py
api_gateway/schemas/: note.py  user.py
auth_service/: Dockerfile  alembic_upgrade.sh  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  settings.py
auth_service/db/: dal.py
auth_service/migrations/: env.py
auth_service/routers/: depends.py  users.py
auth_service/tests/: test_user.py
file_service/: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml  settings.py
file_service/client/: minio_cl.py
file_service/logic/: file.py
file_service/models/: file.py
file_service/routers/: file.py
file_service/routers/__pycache__/: file_service.code-workspace
notes_service/: .env  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  settings.py
notes_service/crud/: note.py
notes_service/db/: mongo_db.py
notes_service/logic/: elastic.py  note.py
notes_service/models/: note.py
notes_service/routers/: note.py
notes_service/routers/depends/: depends.py
notes_service/schemas/: note.py
notes_service/tests/: test_note.py
