[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = ""
authors = ["Simon Sukovatitsin <simonsnag@google.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.2.1"
gunicorn = "^22.0.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
